# cvpr2020-papers

./: .gitignore  README.md  papers.csv
scripts/: main.py  pyproject.toml
